--- a/detail.html
+++ b/detail.html
@@ -1,40 +1,17 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Detail Alat | Virtu DigiLab</title>
-  <link rel="stylesheet" href="style.css" />
-
+  <link rel="stylesheet" href="style.css">
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 20px;
-    }
-    h1 {
-      margin-bottom: 15px;
-    }
-    h2 {
-      margin-top: 35px;
-      margin-bottom: 10px;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 10px;
-    }
-    th, td {
-      border: 1px solid #ccc;
-      padding: 8px;
-      text-align: left;
-    }
-    th {
-      background: #f2f2f2;
-    }
-    .notfound {
-      color: red;
-      font-weight: bold;
-    }
+    body { font-family: Arial, sans-serif; padding: 20px; }
+    h2 { margin-top: 30px; }
+    table { width: 100%; border-collapse: collapse; margin-top: 10px; }
+    th, td { border: 1px solid #ccc; padding: 8px; text-align: left; }
+    th { background: #f2f2f2; }
+    .notfound { color: red; font-weight: bold; }
   </style>
 </head>
 <body>
@@ -50,7 +27,7 @@
 
   <script>
     const urlParams = new URLSearchParams(window.location.search);
-    const serial = urlParams.get("serial");
+    const serial = urlParams.get('serial');
 
     const NRC_URL =
       "https://docs.google.com/spreadsheets/d/e/2PACX-1vQXfYx0A9EbttwdEODklcJe0pY3TGftGwwiqvqQswVczPXNPG3CS3Am7dYNXQVa_XSoJX3Pnd_B3AQI/pub?output=csv";
@@ -59,9 +36,7 @@
     const LOG_C_URL =
       "https://docs.google.com/spreadsheets/d/e/2PACX-1vQXfYx0A9EbttwdEODklcJe0pY3TGftGwwiqvqQswVczPXNPG3CS3Am7dYNXQVa_XSoJX3Pnd_B3AQI/pub?gid=1319359661&single=true&output=csv";
 
-    // ===============================
-    //      CSV Parser Kuat
-    // ===============================
+    // CSV → JSON Converter
     function csvToJson(csvText) {
       const rows = [];
       let current = "";
@@ -69,7 +44,7 @@
       let insideQuote = false;
 
       for (let char of csvText) {
-        if (char === "\"") insideQuote = !insideQuote;
+        if (char === '"') insideQuote = !insideQuote;
         else if (char === "," && !insideQuote) {
           row.push(current.trim());
           current = "";
@@ -78,7 +53,9 @@
           rows.push(row);
           row = [];
           current = "";
-        } else current += char;
+        } else {
+          current += char;
+        }
       }
 
       if (current) row.push(current.trim());
@@ -89,9 +66,7 @@
 
       for (let i = 1; i < rows.length; i++) {
         const obj = {};
-        headers.forEach((h, j) => {
-          obj[h.trim()] = rows[i][j] ? rows[i][j] : "";
-        });
+        headers.forEach((h, j) => obj[h.trim()] = rows[i][j] || "");
         json.push(obj);
       }
 
@@ -105,84 +80,101 @@
     }
 
     function findSerialColumn(obj) {
-      return Object.keys(obj).find((k) => k.toLowerCase().includes("serial")) || null;
+      return Object.keys(obj).find(k => k.toLowerCase().includes("serial")) || null;
     }
 
-    // ===============================
-    //        Load Semua Data
-    // ===============================
+    function renderDocumentCell(url, serial) {
+      if (!url || url.trim() === "") return "-";
+      if (!url.includes("drive.google.com")) return url;
+
+      return `<a href="${url}" target="_blank">Lampiran File</a>`;
+    }
+
     async function loadData() {
       const nrc = await loadCSV(NRC_URL);
       const logM = await loadCSV(LOG_M_URL);
       const logC = await loadCSV(LOG_C_URL);
 
       const serialColNRC = findSerialColumn(nrc[0]);
-      const serialColM = findSerialColumn(logM[0]);
-      const serialColC = findSerialColumn(logC[0]);
+      const serialColM   = findSerialColumn(logM[0]);
+      const serialColC   = findSerialColumn(logC[0]);
 
-      const cleanNRC = nrc.filter((r) => r[serialColNRC] && r[serialColNRC].trim() !== "");
-      const cleanM = logM.filter((r) => r[serialColM] && r[serialColM].trim() !== "");
-      const cleanC = logC.filter((r) => r[serialColC] && r[serialColC].trim() !== "");
+      const cleanNRC = nrc.filter(r => r[serialColNRC] && r[serialColNRC].trim() !== "");
+      const cleanM   = logM.filter(r => r[serialColM]   && r[serialColM].trim() !== "");
+      const cleanC   = logC.filter(r => r[serialColC]   && r[serialColC].trim() !== "");
 
-      // ==========================
-      //       DETAIL ASSET
-      // ==========================
-      const data = cleanNRC.find((r) => r[serialColNRC] === serial);
+      // ===== DETAIL ALAT =====
+      const data = cleanNRC.find(r => r[serialColNRC] === serial);
 
       if (!data) {
         document.getElementById("data-container").innerHTML =
           `<p class="notfound">Data tidak ditemukan untuk Serial: ${serial}</p>`;
       } else {
-        let html = `<table>`;
-        Object.keys(data).forEach((k) => {
+        let html = "<table>";
+        Object.keys(data).forEach(k => {
           html += `<tr><th>${k}</th><td>${data[k]}</td></tr>`;
         });
-        html += `</table>`;
+        html += "</table>";
         document.getElementById("data-container").innerHTML = html;
       }
 
-      // ==========================
-      //       LOG MAINTENANCE
-      // ==========================
-      const filteredM = cleanM.filter((r) => r[serialColM] === serial);
+      // ===== LOG MAINTENANCE =====
+      const filteredM = cleanM.filter(r => r[serialColM] === serial);
 
       if (filteredM.length === 0) {
         document.getElementById("log-maintenance").innerHTML = "Tidak ada data.";
       } else {
-        let html = `<table><tr>`;
-        Object.keys(filteredM[0]).forEach((k) => (html += `<th>${k}</th>`));
-        html += `</tr>`;
+        let html = "<table><tr>";
 
-        filteredM.forEach((r) => {
-          html += `<tr>` + Object.values(r).map((v) => `<td>${v}</td>`).join("") + `</tr>`;
+        Object.keys(filteredM[0]).forEach(k => html += `<th>${k}</th>`);
+        html += "</tr>";
+
+        filteredM.forEach(r => {
+          html += "<tr>";
+          Object.keys(r).forEach(k => {
+            let val = r[k];
+            if (k.toLowerCase().includes("document")) {
+              val = renderDocumentCell(val, serial);
+            }
+            html += `<td>${val}</td>`;
+          });
+          html += "</tr>";
         });
 
-        html += `</table>`;
+        html += "</table>";
         document.getElementById("log-maintenance").innerHTML = html;
       }
 
-      // ==========================
-      //       LOG CALIBRATION
-      // ==========================
-      const filteredC = cleanC.filter((r) => r[serialColC] === serial);
+      // ===== LOG CALIBRATION =====
+      const filteredC = cleanC.filter(r => r[serialColC] === serial);
 
       if (filteredC.length === 0) {
         document.getElementById("log-calibration").innerHTML = "Tidak ada data.";
       } else {
-        let html = `<table><tr>`;
-        Object.keys(filteredC[0]).forEach((k) => (html += `<th>${k}</th>`));
-        html += `</tr>`;
+        let html = "<table><tr>";
 
-        filteredC.forEach((r) => {
-          html += `<tr>` + Object.values(r).map((v) => `<td>${v}</td>`).join("") + `</tr>`;
+        Object.keys(filteredC[0]).forEach(k => html += `<th>${k}</th>`);
+        html += "</tr>";
+
+        filteredC.forEach(r => {
+          html += "<tr>";
+          Object.keys(r).forEach(k => {
+            let val = r[k];
+            if (k.toLowerCase().includes("document")) {
+              val = renderDocumentCell(val, serial);
+            }
+            html += `<td>${val}</td>`;
+          });
+          html += "</tr>";
         });
 
-        html += `</table>`;
+        html += "</table>";
         document.getElementById("log-calibration").innerHTML = html;
       }
     }
 
     loadData();
   </script>
+
 </body>
 </html>
