--- a/detail.html
+++ b/detail.html
@@ -12,11 +12,13 @@
     th, td { border: 1px solid #ccc; padding: 8px; text-align: left; }
     th { background: #f2f2f2; }
     .notfound { color: red; font-weight: bold; }
+    .qr-cell { text-align: center; padding: 10px; }
   </style>
 </head>
 <body>
 
   <h1>Detail Alat</h1>
+
   <div id="data-container">Memuat data...</div>
 
   <h2>Log Maintenance</h2>
@@ -24,6 +26,9 @@
 
   <h2>Log Calibration</h2>
   <div id="log-calibration">Memuat...</div>
+
+  <!-- Library QR Code Styling -->
+  <script src="https://cdn.jsdelivr.net/npm/qr-code-styling@1.6.0/lib/qr-code-styling.js"></script>
 
   <script>
     const urlParams = new URLSearchParams(window.location.search);
@@ -36,40 +41,25 @@
     const LOG_C_URL =
       "https://docs.google.com/spreadsheets/d/e/2PACX-1vQXfYx0A9EbttwdEODklcJe0pY3TGftGwwiqvqQswVczPXNPG3CS3Am7dYNXQVa_XSoJX3Pnd_B3AQI/pub?gid=1319359661&single=true&output=csv";
 
-    // CSV → JSON Converter
     function csvToJson(csvText) {
       const rows = [];
-      let current = "";
-      let row = [];
-      let insideQuote = false;
-
+      let current = "", row = [], insideQuote = false;
       for (let char of csvText) {
         if (char === '"') insideQuote = !insideQuote;
-        else if (char === "," && !insideQuote) {
-          row.push(current.trim());
-          current = "";
-        } else if (char === "\n" && !insideQuote) {
-          row.push(current.trim());
-          rows.push(row);
-          row = [];
-          current = "";
-        } else {
-          current += char;
-        }
+        else if (char === "," && !insideQuote) { row.push(current.trim()); current = ""; }
+        else if (char === "\n" && !insideQuote) { row.push(current.trim()); rows.push(row); row = []; current = ""; }
+        else current += char;
       }
-
       if (current) row.push(current.trim());
       if (row.length) rows.push(row);
 
       const headers = rows[0];
       const json = [];
-
       for (let i = 1; i < rows.length; i++) {
         const obj = {};
         headers.forEach((h, j) => obj[h.trim()] = rows[i][j] || "");
         json.push(obj);
       }
-
       return json;
     }
 
@@ -83,10 +73,9 @@
       return Object.keys(obj).find(k => k.toLowerCase().includes("serial")) || null;
     }
 
-    function renderDocumentCell(url, serial) {
+    function renderDocumentCell(url) {
       if (!url || url.trim() === "") return "-";
       if (!url.includes("drive.google.com")) return url;
-
       return `<a href="${url}" target="_blank">Lampiran File</a>`;
     }
 
@@ -105,76 +94,83 @@
 
       // ===== DETAIL ALAT =====
       const data = cleanNRC.find(r => r[serialColNRC] === serial);
+      const container = document.getElementById("data-container");
 
       if (!data) {
-        document.getElementById("data-container").innerHTML =
-          `<p class="notfound">Data tidak ditemukan untuk Serial: ${serial}</p>`;
+        container.innerHTML = `<p class="notfound">Data tidak ditemukan untuk Serial: ${serial}</p>`;
       } else {
         let html = "<table>";
         Object.keys(data).forEach(k => {
           html += `<tr><th>${k}</th><td>${data[k]}</td></tr>`;
         });
+
+        // Tambahkan baris QR Code di bawah Place Type
+        const placeTypeKey = Object.keys(data).find(k => k.toLowerCase().includes("place type"));
+        if (placeTypeKey) {
+          html += `<tr><th>QR Code</th><td class="qr-cell" id="qr-code-cell"></td></tr>`;
+        }
+
         html += "</table>";
-        document.getElementById("data-container").innerHTML = html;
+        container.innerHTML = html;
+
+        // Generate QR Code
+        const qrCell = document.getElementById("qr-code-cell");
+        if (qrCell) {
+          const qr = new QRCodeStyling({
+            width: 150,
+            height: 150,
+            data: window.location.href,
+            dotsOptions: { color: "#000", type: "rounded" },
+            backgroundOptions: { color: "#fff" }
+          });
+          qr.append(qrCell);
+        }
       }
 
       // ===== LOG MAINTENANCE =====
       const filteredM = cleanM.filter(r => r[serialColM] === serial);
-
-      if (filteredM.length === 0) {
-        document.getElementById("log-maintenance").innerHTML = "Tidak ada data.";
-      } else {
+      const logMContainer = document.getElementById("log-maintenance");
+      if (filteredM.length === 0) logMContainer.innerHTML = "Tidak ada data.";
+      else {
         let html = "<table><tr>";
-
         Object.keys(filteredM[0]).forEach(k => html += `<th>${k}</th>`);
         html += "</tr>";
-
         filteredM.forEach(r => {
           html += "<tr>";
           Object.keys(r).forEach(k => {
             let val = r[k];
-            if (k.toLowerCase().includes("document")) {
-              val = renderDocumentCell(val, serial);
-            }
+            if (k.toLowerCase().includes("document")) val = renderDocumentCell(val);
             html += `<td>${val}</td>`;
           });
           html += "</tr>";
         });
-
         html += "</table>";
-        document.getElementById("log-maintenance").innerHTML = html;
+        logMContainer.innerHTML = html;
       }
 
       // ===== LOG CALIBRATION =====
       const filteredC = cleanC.filter(r => r[serialColC] === serial);
-
-      if (filteredC.length === 0) {
-        document.getElementById("log-calibration").innerHTML = "Tidak ada data.";
-      } else {
+      const logCContainer = document.getElementById("log-calibration");
+      if (filteredC.length === 0) logCContainer.innerHTML = "Tidak ada data.";
+      else {
         let html = "<table><tr>";
-
         Object.keys(filteredC[0]).forEach(k => html += `<th>${k}</th>`);
         html += "</tr>";
-
         filteredC.forEach(r => {
           html += "<tr>";
           Object.keys(r).forEach(k => {
             let val = r[k];
-            if (k.toLowerCase().includes("document")) {
-              val = renderDocumentCell(val, serial);
-            }
+            if (k.toLowerCase().includes("document")) val = renderDocumentCell(val);
             html += `<td>${val}</td>`;
           });
           html += "</tr>";
         });
-
         html += "</table>";
-        document.getElementById("log-calibration").innerHTML = html;
+        logCContainer.innerHTML = html;
       }
     }
 
     loadData();
   </script>
-
 </body>
 </html>
